--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,236 @@
-.App {
+/* Much of the CSS is from https://codepen.io/__e8e0f2257b/pen/NxMpGq */
+
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300);
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-weight: 300;
+}
+/* body { */
+.welcomeWrapper {
+  font-family: 'Source Sans Pro', sans-serif;
+  color: white;
+  font-weight: 300;
+}
+/* body ::-webkit-input-placeholder { */
+.welcomeWrapper ::-webkit-input-placeholder {
+  /* WebKit browsers */
+  font-family: 'Source Sans Pro', sans-serif;
+  color: white !important;
+  font-weight: 300;
+}
+/* body :-moz-placeholder { */
+.welcomeWrapper :-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  font-family: 'Source Sans Pro', sans-serif;
+  color: white !important;
+  opacity: 1;
+  font-weight: 300;
+}
+/* body ::-moz-placeholder { */
+.welcomeWrapper ::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  font-family: 'Source Sans Pro', sans-serif;
+  color: white !important;
+  opacity: 1;
+  font-weight: 300;
+}
+/* body :-ms-input-placeholder { */
+.welcomeWrapper :-ms-input-placeholder {
+  /* Internet Explorer 10+ */
+  font-family: 'Source Sans Pro', sans-serif;
+  color: white !important;
+  font-weight: 300;
+}
+.welcomeWrapper {
+  /* background: #50a3a2; */
+  background: #e5ecef;
+  /* background: linear-gradient(to top left, #50a3a2 0%, #53e3a6 100%); */
+  /* background: linear-gradient(to bottom right, #50a3a2 0%, #53e3a6 100%); */
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  /* height: 400px; */
+  height: 100%;
+  /* margin-top: -200px; */
+  margin-top: -50vh;
+  overflow: hidden;
+}
+.welcomeWrapper.form-success .container h1 {
+          transform: translateY(85px);
+}
+.container {
+  background-color: grey;
+  border-radius: 15px;
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 80px 0;
+  height: 400px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container h1 {
+  font-size: 40px;
+  transition-duration: 1s;
+  transition-timing-function: ease-in-     put;
+  font-weight: 200;
+}
+.form {
+  padding: 20px 0;
+  position: relative;
+  z-index: 2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+/* form input { */
+/* input { */
+.welcomeInput {
+  appearance: none;
+  /* color: red !important; */
+  outline: 0;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  background-color: rgba(255, 255, 255, 0.2);
+  width: 250px;
+  border-radius: 3px;
+  padding: 10px 15px;
+  margin: 0 auto 10px auto;
+  display: block;
+  text-align: center;
+  font-size: 18px;
   color: white;
+  -webkit-transition-duration: 0.25s;
+          transition-duration: 0.25s;
+  font-weight: 300;
+}
+/* form input:hover { */
+/* input:hover { */
+welcomeInput:hover {
+  background-color: rgba(255, 255, 255, 0.4);
+}
+/* form input:focus { */
+.welcomeInput:focus {
+  background-color: white;
+  width: 300px;
+  color: #53e3a6;
+}
+/* button { */
+.welcomeButton {
+  appearance: none;
+  outline: 0;
+  background-color: white;
+  border: 0;
+  padding: 10px 15px;
+  color: #53e3a6;
+  border-radius: 3px;
+  width: 120px;
+  cursor: pointer;
+  font-size: 18px;
+  transition-duration: 0.25s;
+
+}
+#register-button{
+  margin-right: 1vw;
 }
 
-.App-link {
-  color: #61dafb;
+#login-button{
+  margin-left: 0vw;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* form button:hover { */
+/* button:hover { */
+.welcomeButton:hover {
+  background-color: #f5f7f9;
+}
+.bg-bubbles {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+.bg-bubbles li {
+  position: absolute;
+  list-style: none;
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(255, 255, 255, 0.15);
+  bottom: -160px;
+  animation: square 25s infinite; 
+  transition-timing-function: linear;
+}
+.bg-bubbles li:nth-child(1) {
+  left: 10%;
+}
+.bg-bubbles li:nth-child(2) {
+  left: 20%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 2s;
+  animation-duration: 17s;
+}
+.bg-bubbles li:nth-child(3) {
+  left: 25%;
+  animation-delay: 4s;
+  
+}
+.bg-bubbles li:nth-child(4) {
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-duration: 22s;
+  background-color: rgba(255, 255, 255, 0.25);
+}
+.bg-bubbles li:nth-child(5) {
+  left: 70%;
+}
+.bg-bubbles li:nth-child(6) {
+  left: 80%;
+  width: 120px;
+  height: 120px;
+  animation-delay: 3s;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.bg-bubbles li:nth-child(7) {
+  left: 32%;
+  width: 160px;
+  height: 160px;
+  animation-delay: 7s;
+}
+.bg-bubbles li:nth-child(8) {
+  left: 55%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 15s;
+  animation-duration: 40s;
+}
+.bg-bubbles li:nth-child(9) {
+  left: 25%;
+  width: 10px;
+  height: 10px;
+  animation-delay: 2s;
+  animation-duration: 40s;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.bg-bubbles li:nth-child(10) {
+  left: 90%;
+  width: 160px;
+  height: 160px;
+  animation-delay: 11s;        
+}
+@keyframes square {
+  0% {
+    transform: translateY(0);
   }
-  to {
-    transform: rotate(360deg);
+  100% {
+    transform: translateY(-700px) rotate(600deg);
+  }
+}
+@keyframes square {
+  0% {
+            transform: translateY(0);
+  }
+  100% {
+            transform: translateY(-700px) rotate(600deg);
   }
 }
