--- a/src/App.css
+++ b/src/App.css
@@ -62,10 +62,11 @@
           transform: translateY(85px);
 }
 .container {
-  background-color: grey;
+  background-color: rgb(97, 189, 219);
   border-radius: 15px;
   max-width: 600px;
   margin: 0 auto;
+  margin-top: 120px;
   padding: 80px 0;
   height: 400px;
   text-align: center;
@@ -111,7 +112,8 @@ welcomeInput:hover {
 .welcomeInput:focus {
   background-color: white;
   width: 300px;
-  color: #53e3a6;
+  /* color: #53e3a6; */
+  color: black;
 }
 /* button { */
 .welcomeButton {
@@ -120,7 +122,8 @@ welcomeInput:hover {
   background-color: white;
   border: 0;
   padding: 10px 15px;
-  color: #53e3a6;
+  /* color: #53e3a6; */
+  color: black;
   border-radius: 3px;
   width: 120px;
   cursor: pointer;
